# Phaedrus-FPS

./: .gitignore  CMakeLists.txt  GameEngine.1  Readme.txt  common.h  common_checked_type.h  globals.h  main.cpp
GameEngine.xcodeproj/: aaron.mode1v3  aaron.pbxuser  project.pbxproj
Math/: Plane.cpp  Plane.h  Vector.cpp  Vector.h  Vertex.h
Render/: Render.cpp  Render.h
Resources/: WorldStartup.lua  WorldStartup.py  test.map
System/: Client.cpp  Client.h  Console.cpp  Input.cpp  Input.h  Kernel.cpp  Kernel.h  Task.cpp  Task.h  Timer.cpp  Timer.h  VFS.cpp  VFS.h  Window.cpp  Window.h
Util/: LockFreeFIFO.cpp
VM/: Script.cpp  Script.h  VM.cpp  VM.h  VMCall.h  VMType.cpp  VMType.h
World/: Camera.cpp  Camera.h  Entity.cpp  Entity.h  Level.cpp  Mesh.cpp  Mesh.h  ParticleSystem.cpp  PlayerEntity.cpp  PlayerEntity.h  ResourceManager.cpp  ResourceManager.h  Resources.h  Texture.cpp  Texture.h  World.cpp  World.h  WorldUpdater.cpp  WorldUpdater.h
World/World-1.moved-aside/: PlayerEntity.h
lib/: CMakeLists.txt
lib/PhysicsFS/: CMakeCache.txt  Makefile  cmake_install.cmake  libphysfs.2.0.0.dylib  test_physfs  wxtest_physfs
lib/PhysicsFS/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeDebug  ReRunCMake.make  XCODE_DEPEND_HELPER.make  dist_cmakeRulesBuildPhase.makeDebug  install_postBuildPhase.makeRelease  physfs-static_postBuildPhase.makeDebug  physfs_postBuildPhase.makeDebug  test_physfs_postBuildPhase.makeRelease  wxtest_physfs_postBuildPhase.makeRelease
lib/PhysicsFS/PhysicsFS.build/Debug/libphysfs.a.build/: Script-DE1310DE1310DE1310000000.sh  libphysfs.a.dep
lib/PhysicsFS/PhysicsFS.build/Debug/libphysfs.a.build/Objects-normal/i386/: physfs.LinkFileList
lib/PhysicsFS/PhysicsFS.build/Debug/libphysfs.dylib.build/: Script-DC8870DC8870DC8870000000.sh  libphysfs.dylib.dep
lib/PhysicsFS/PhysicsFS.build/Debug/libphysfs.dylib.build/Objects-normal/i386/: physfs.LinkFileList
lib/PhysicsFS/PhysicsFS.build/Debug/test_physfs.build/: Script-DEBD50DEBD50DEBD50000000.sh  test_physfs.dep
lib/PhysicsFS/PhysicsFS.build/Debug/test_physfs.build/Objects-normal/i386/: test_physfs.LinkFileList
lib/PhysicsFS/PhysicsFS.build/Debug/wxtest_physfs.build/: Script-DF6420DF6420DF6420000000.sh  wxtest_physfs.dep
lib/PhysicsFS/PhysicsFS.build/Debug/wxtest_physfs.build/Objects-normal/i386/: wxtest_physfs.LinkFileList
lib/PhysicsFS/PhysicsFS.build/Release/libphysfs.a.build/: libphysfs.a.dep
lib/PhysicsFS/PhysicsFS.build/Release/libphysfs.a.build/Objects-normal/i386/: physfs.LinkFileList
lib/PhysicsFS/PhysicsFS.build/Release/libphysfs.dylib.build/: libphysfs.dylib.dep
lib/PhysicsFS/PhysicsFS.build/Release/libphysfs.dylib.build/Objects-normal/i386/: physfs.LinkFileList
lib/PhysicsFS/PhysicsFS.build/Release/test_physfs.build/: Script-DEB790DEB790DEB790000000.sh  test_physfs.dep
lib/PhysicsFS/PhysicsFS.build/Release/test_physfs.build/Objects-normal/i386/: test_physfs.LinkFileList
lib/PhysicsFS/PhysicsFS.build/Release/wxtest_physfs.build/: wxtest_physfs.dep
lib/PhysicsFS/PhysicsFS.build/Release/wxtest_physfs.build/Objects-normal/i386/: wxtest_physfs.LinkFileList
lib/PhysicsFS/PhysicsFS.xcodeproj/: aaron.mode1v3  aaron.pbxuser  project.pbxproj
lib/SDL_image/: CMakeLists.txt  Makefile  config.status  libtool
lib/SDL_image/.deps/: IMG.Plo  IMG_bmp.Plo  IMG_pnm.Plo  showimage.Po
lib/SDL_image/SDL_image/: SDL_image.qpg
lib/SDL_image/SDL_image/.deps/: IMG_gif.Plo  IMG_jpg.Plo  IMG_lbm.Plo  IMG_pcx.Plo  IMG_png.Plo  IMG_tga.Plo  IMG_tif.Plo  IMG_xcf.Plo  IMG_xpm.Plo  IMG_xv.Plo
lib/SDL_image/SDL_image/Xcode/SDL_image.xcodeproj/: aaron.pbxuser  project.pbxproj
lib/SDL_image/SDL_image/Xcode/exports/: SDL_image.x.old
lib/SDL_image/Xcode/: Info-Framework__Upgraded_.plist  mkxcode.csh
lib/SDL_image/Xcode/SDL_image.xcodeproj/: aaron.mode1v3
lib/SDL_image/Xcode/pkg-support/resources/: ReadMe.txt
lib/SDL_image/Xcode/showimage/showimage.xcodeproj/: project.pbxproj
lib/lua/: CMakeLists.txt
lib/luabind/: CMakeLists.txt
lib/luabind/luabind/detail/: policy.hpp
src/: CMakeLists.txt  common.cpp  common.h  common_exception.h  globals.cpp  globals.h  main.cpp
src/Math/: Plane.cpp  Plane.h  Vector.cpp  Vector.h  Vertex.cpp  Vertex.h
src/Render/: GL.h  Render.cpp  Render.h
src/System/: Client.cpp  Client.h  Console.h  Input.cpp  Input.h  Kernel.cpp  Kernel.h  Task.h  Timer.cpp  Timer.h  VFS.cpp  VFS.h  Window.cpp  Window.h
src/Util/: LockFreeFIFO.h
src/VM/: Script.cpp  Script.h  VM.cpp  VM.h
src/World/: Camera.cpp  Entity.cpp  Entity.h  Level.cpp  Level.h  Mesh.cpp  Mesh.h  ParticleSystem.cpp  ParticleSystem.h  PhysicsBase.cpp  PhysicsBase.h  PlayerEntity.cpp  PlayerEntity.h  ResourceManager.cpp  ResourceManager.h  Resources.h  Texture.cpp  Texture.h  World.cpp  World.h  WorldUpdater.cpp  WorldUpdater.h
