# Add our libraries

ADD_SUBDIRECTORY(lua)
ADD_SUBDIRECTORY(luabind)

# Configure PhysicsFS
SET(PHYSFS_BUILD_SHARED FALSE)
SET(PHYSFS_BUILD_STATIC TRUE)
SET(PHYSFS_BUILD_TEST FALSE)
SET(PHYSFS_BUILD_WX_TEST FALSE)
SET(PHYSFS_INTERNAL_ZLIB TRUE)
ADD_SUBDIRECTORY(PhysicsFS)

ADD_SUBDIRECTORY(SDL_image)